name:                 jucy-tree
version:              0.1.0.0
synopsis:             Sample implementation for Ascii Art Christmas tree
description:          Some 30 minute randome problem
license:              BSD3
license-file:         LICENSE
homepage:             https://github.com/tolysz/jucy-t
author:               Marcin Tolysz
maintainer:           tolysz@gmail.com
category:             Fun
copyright:            2016(c) Marcin Tolysz
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

executable jucy-tree
  main-is:              Main.hs
  build-depends:        base >= 4.7 && < 5
               , JuicyPixels
               , vector
  hs-source-dirs:       src
  default-language:     Haskell2010
